--- a/nasa/hubble/pages/bitacora.jade
+++ b/nasa/hubble/pages/bitacora.jade
@@ -26,3 +26,9 @@ div(layout="flex" style="justify-content : center")
                         td(md-cell) 20 de noviembre del 2018
                         td(md-cell) Se agrego la constelación de formulario
                         td(md-cell) 
+                    tr(md-row md-select="dato" md-select-id="name" md-auto-select)
+                        td(md-cell) 1.0.1
+                        td(md-cell) Malaganator3000
+                        td(md-cell) 26 de noviembre del 2018
+                        td(md-cell) Se agregó la constelacion imagenes
+                        td(md-cell) Esta constelación sirve para añadir imagenes a un planeta en calidad 400x400, 200x200, 100x100, 50x50. Las relación debera ser Planeta -> imagenesPlaneta.                
