--- a/nasa/hubble/pages/bitacora.jade
+++ b/nasa/hubble/pages/bitacora.jade
@@ -32,3 +32,16 @@ div(layout="flex" style="justify-content : center")
                         td(md-cell) 26 de noviembre del 2018
                         td(md-cell) Se agregó la constelacion imagenes
                         td(md-cell) Esta constelación sirve para añadir imagenes a un planeta en calidad 400x400, 200x200, 100x100, 50x50. Las relación debera ser Planeta -> imagenesPlaneta.                
+                   tr(md-row md-select="dato" md-select-id="name" md-auto-select)
+                        td(md-cell) 1.0.1
+                        td(md-cell) Ulises
+                        td(md-cell) 26 de noviembre del 2018
+                        td(md-cell) Corrección de las fichas
+                        td(md-cell) Se corrigió el archivo blackhole.js: linea 94 colum 86
+                   tr(md-row md-select="dato" md-select-id="name" md-auto-select)
+                        td(md-cell) 1.0.1
+                        td(md-cell) Malaganator3000
+                        td(md-cell) 27 de noviembre del 2018
+                        td(md-cell) Creación de la constelación chit-autocomplete
+                        td(md-cell)                      
+
