--- a/nasa/hubble/pages/bitacora.jade
+++ b/nasa/hubble/pages/bitacora.jade
@@ -50,3 +50,9 @@ div(layout="flex" style="justify-content : center")
                          td(md-cell) 29 de noviembre del 2018
                          td(md-cell) Correciones a la fichas
                          td(md-cell) Se cambio el template de donde se jalaba la ficha para que se sincronizara bien con los componentes
+                    tr(md-row md-select="dato" md-select-id="name" md-auto-select)
+                        td(md-cell) 1.0.6
+                        td(md-cell) ulises
+                        td(md-cell) 29 de noviembre del 2018
+                        td(md-cell) Correciones de las relaciones
+                        td(md-cell) Se intercalaban las relaciones
